review entire ms

--- a/latex/akita.bib
+++ b/latex/akita.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tetsuya Akita at 2022-02-08 17:13:14 +0900 
+%% Created for Tetsuya Akita at 2022-02-09 11:46:15 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hampton2001spatially,
+	author = {Hampton, John and Fournier, David A},
+	date-added = {2022-02-09 11:41:59 +0900},
+	date-modified = {2022-02-09 11:45:40 +0900},
+	journal = {Marine and Freshwater Research},
+	number = {7},
+	pages = {937--963},
+	publisher = {CSIRO Publishing},
+	title = {A spatially disaggregated, length-based, age-structured population model of yellowfin tuna (\emph{Thunnus albacares}) in the western and central Pacific Ocean},
+	volume = {52},
+	year = {2001}}
 
 @book{hilborn2013quantitative,
 	address = {New York},
@@ -543,14 +555,14 @@
 @article{Huisman_2017,
 	author = {Huisman, Jisca},
 	date-added = {2019-04-22 11:37:57 +0900},
-	date-modified = {2019-11-15 16:21:56 +0900},
+	date-modified = {2022-02-09 11:46:14 +0900},
 	doi = {10.1111/1755-0998.12665},
 	issn = {1755-098X},
 	journal = {Molecular Ecology Resources},
 	number = {5},
 	pages = {1009--1024},
 	publisher = {Wiley},
-	title = {Pedigree reconstruction from SNP data: parentage assignment, sibship clustering and beyond},
+	title = {Pedigree reconstruction from {SNP} data: parentage assignment, sibship clustering and beyond},
 	url = {http://dx.doi.org/10.1111/1755-0998.12665},
 	volume = {17},
 	year = {2017},
