--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -27,7 +27,7 @@
 \usepackage{bm}
 \usepackage{relsize}
 \usepackage[normalem]{ulem} %%
-%\linenumbers
+\linenumbers
 \usepackage{bm}
 \setlength{\parindent}{20pt}
 \usepackage[labelformat=empty,labelsep=none]{caption}
@@ -87,29 +87,27 @@ Tetsuya Akita$^{a}$\thanks{
 
 % 1: Estimating contemporary migration is important for both ecologically and evolutionally reasons
 
-In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between pre-defined populations, is a critical component to determine the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol, https://doi.org/10.1111/j.1365-294X.2010.04688.x}. Therefore, estimation of contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units and identify appropriate management units \cite[]{moritz1994defining, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for a more precise and flexible evaluation of a management for many relevant topics including stock assessment in fisheries \cite[]{methot2013stock} and the invasive species control \cite[]{doi:10.1146/annurev.ecolsys.32.081501.114037}. 
+In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between pre-defined populations, is a critical component to determine the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol, https://doi.org/10.1111/j.1365-294X.2010.04688.x}. Therefore, estimation of contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units and identify appropriate management units \cite[]{moritz1994defining, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for a more precise and flexible evaluation of a management for many relevant topics including stock assessment in fisheries \cite[]{hampton2001spatially} and the invasive species control \cite[]{doi:10.1146/annurev.ecolsys.32.081501.114037}. 
 
 % 2: Mark recapture method can handle ecological scale but may miss the small migration rate
 
-There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and reporting rate \cite[]{hilborn2013quantitative}. In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
+There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and time-varying reporting rate \cite[]{hilborn2013quantitative}. In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
 
 % 3: Population genetics method can handle evolutionally scale but may miss the large migration rate
 
-The second is to use numerous genetic markers to assign individuals to source populations, allowing the inference of recent migration \cite[since][]{https://doi.org/10.1111/j.1365-294X.1995.tb00227.x}. The model of \cite{Wilson_2003}, which is one of such population assignment methods and implemented in a software `BayesAss', can output the point estimate as an element of a current migration matrix. However, as evaluated by several authors \cite[]{https://doi.org/10.1111/j.1365-294X.2007.03218.x, https://doi.org/10.1111/mec.12806}, the accuracy of estimated migration rates by the model is valid only when populations are highly differentiated ($F_{\rm ST}\ge0.05$), suggesting that it may be difficult to infer the degree of demographic dependency among populations since demographic independency is realized even if there are many migrants. 
+The second is to use numerous genetic markers to assign individuals to source populations, allowing the inference of recent migration \cite[since][]{https://doi.org/10.1111/j.1365-294X.1995.tb00227.x}. The model of \cite{Wilson_2003}, which is one of such population assignment methods and implemented in a software `BayesAss', can output the point estimate as an element of a current migration matrix. However, as evaluated by several authors \cite[]{https://doi.org/10.1111/j.1365-294X.2007.03218.x, https://doi.org/10.1111/mec.12806}, the accuracy of estimated migration rates by the model is valid only when populations are highly differentiated (e.g., $F_{\rm ST}\ge0.05$), suggesting that it may be difficult to infer the degree of demographic dependency among populations since demographic independency is realized even if there are many migrants. 
 
 % 4: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
 
-Parental assignments, which is based on genetic markers and often used as a complement to the population assignment method in ecological studies, also provide information about the current level of migration. In contrast to the population assignment method, the parental assignment method does not require the population differentiation \cite[]{https://doi.org/10.1111/mec.12806}. However, the current methodology focuses on estimating dispersal kernels and strongly depends on the assumption adults are not migrant, e.g., pollen/seeds dispersal in plants \cite[]{doi:10.1080/07352689.2010.481167} or larval drift in marine animals \cite[]{https://doi.org/10.1111/eva.12288}; thus, it does not apply the movement of iteroparous species (i.e., multiple reproductive cycles during the lifetime) that may change the spawning ground for each breeding season. 
+Parental assignments, which is based on genetic markers and often used as a complement to the population assignment method in ecological studies, also provide information about the current level of migration. In contrast to the population assignment method, the parental assignment method does not require the population differentiation \cite[]{https://doi.org/10.1111/mec.12806}. However, the current methodology focuses on estimating dispersal kernels and, for estimating migration rate, requires the assumption that adults are not migrant, e.g., pollen/seeds dispersal in plants \cite[]{doi:10.1080/07352689.2010.481167} or larval drift in marine animals \cite[]{https://doi.org/10.1111/eva.12288}; thus, it may not apply the adult movement of iteroparous species (i.e., multiple reproductive cycles during the lifetime) that may change the spawning ground for each breeding season. 
 
 % 5: CKMR can cover the range that Mark recapture can handle with more realistic situations
 
-Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the known kinship information in a sample \cite[reviewed in][]{https://doi.org/10.1111/faf.12615}. The rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect an adult number in the population \cite[]{bravington2016close}. While recent studies of CKMR argued that availability of kinship information in estimating the migration rate \cite[]{https://doi.org/10.1002/ece3.6296, 10.1093/icesjms/fsac002}, the CKMR-based migration estimation has not been well developed and rigorously examined in a simulation study. 
+Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the known kinship information in a sample \cite[reviewed in][]{https://doi.org/10.1111/faf.12615}. The rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in the MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect an adult number in the population \cite[]{bravington2016close}. While recent studies of CKMR argued that availability of kinship information in estimating the migration rate \cite[]{https://doi.org/10.1002/ece3.6296, 10.1093/icesjms/fsac002}, the CKMR-based migration estimation has not been well developed and rigorously examined in a simulation study. 
 
 % 6: In this paper, ~
 
-In this study, we propose a new method for estimating the contemporary migration number or rate of adults between the two pre-defined populations in iteroparous species, where the migration direction is specified. Assuming that kinships are genetically detected without any error, this method is based on the numbers of half-sibling (HS) and parent-offspring (PO) pairs in a sample. Sampling can be invasive or non-invasive and is completed at two breeding seasons; sampling offspring (young-of-year individuals) and parents probably shares PO relationship with sampled offspring in the one population at the first breeding season and in the another population at the second breeding season. The rationale is that the number of PO and HS pairs found between populations have information as to how often parental movements are realized. Our model explicitly incorporates reproductive variation within and between populations, making it possible to target a species whose fertility is affected by environmental differences between populations. 
-
-First, we explain the modeling assumption and sampling scheme. Then, we analytically determine the estimators of the contemporary migration number or rate of adults, which are based on the numbers of HS and/or PO pairs. Finally, by running an individual-based model, we investigate the performance of the estimator and provide a guide for a sample size. It is noteworthy that our modeling framework can be applied to diverse animal species. However, the description of the model focuses on fish species, which are presently the best candidate target of our proposed method.
+In this study, we propose a new method for estimating the contemporary migration number or rate of adults between two pre-defined populations in iteroparous species, where the migration direction is specified. Assuming that kinships are genetically detected without any error, this method is based on the numbers of half-sibling (HS) and parent-offspring (PO) pairs in a sample. Sampling can be invasive or non-invasive and is completed at two breeding seasons; sampling offspring (young-of-year individuals) and parents probably shares PO relationship with sampled offspring in the one population at the first breeding season and in the another population at the second breeding season. The rationale is that the number of PO and HS pairs found between populations have information as to how often parental movements during the breeding interval are realized. Our model explicitly incorporates reproductive variation within and between populations, making it possible to target a species whose fertility is affected by environmental differences between populations. First, we explain the modeling assumption and sampling scheme. Then, we analytically determine the estimators of the contemporary migration number or rate of adults, which are based on the numbers of HS and/or PO pairs. Finally, by running an individual-based model, we investigate the performance of the estimator and provide a guide for a sample size. It is noteworthy that our modeling framework can be applied to diverse animal species. However, the description of the model focuses on fish species, which are presently the best candidate target of our proposed method.
 
 \section{Theory}\label{sec2}
 In this section, we present the theoretical foundation for estimating a migrant number and a migration rate of iteroparous species using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix 2}), here we assume a relatively simple situation for explanation purposes. The main symbols used in the current paper are summarized in {\bf Table \ref{symbols}}. 
@@ -304,11 +302,11 @@ Finally, we investigated the situation in which the parental number in the popul
 
 \section{Discussion}\label{sec4}
 
-We theoretically developed unbiased estimators of the contemporary migration number (${\hat M_1}$--${\hat M_5}$) and migration rate (${\hat m_1}$--${\hat m_4}$) of parents between two populations in iteroparous species, where the migration direction is specified. The proposed estimators are based on known PO relationship and HS relationships observed between and within two populations without any error of kinship assignment. Users can choose the estimator developed for the situation as to whether the parental number of population 1 ($N_1$) and/or that of population 2 ($N_2$) is known ({\bf Table~\ref{parameter}}). The performance of the estimator (accuracy and precision) was quantitatively evaluated by running an individual-based model ({\bf Figure~\ref{violins}}; see also {\bf Table S1} in {\bf Supporting Information}). Our modeling framework utilizes several types of reproductive variations (survived offspring number per parent), including variance of reproductive potential between and within populations, taking account of several situations, including a body-size structure or environmental heterogeneity for reproductive success.
+We theoretically developed estimators of the contemporary migration number (${\hat M_1}$--${\hat M_5}$) and migration rate (${\hat m_1}$--${\hat m_4}$) of parents between two pre-defined populations in iteroparous species. The proposed estimators are based on known PO relationship and HS relationships observed between and within two populations without any error of kinship assignment. Users can choose the estimator developed for the situation as to whether the parental number of population 1 ($N_1$) and/or that of population 2 ($N_2$) is known ({\bf Table~\ref{parameter}}). The performance of the estimator (accuracy and precision) was quantitatively evaluated by running an individual-based model ({\bf Figure~\ref{violins}}; see also {\bf Table S1} in {\bf Supporting Information}). Our modeling framework utilizes several types of reproductive variations (survived offspring number per parent), including variance of reproductive potential within and between populations, taking account of several situations, including a body-size structure or environmental heterogeneity for reproductive success.
 
-We presented mainly three novel points in this paper. First, we formulated probabilities of kinship pairs randomly chosen between two populations ($\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$), which provide estimators of the migration number or rate. While similar derivations are found in (nongenetical) mark-recapture method (\RED{REF}), these are limited to the situation such that sampling can be non-invasive and adult individuals are sampled. Our proposed method can avoid these limitations, where such an advantages is characterized by CKMR method. Second, we revealed that the probabilities of kinship pairs are approximately independent of reproductive potential and thus information about it is not needed for the estimation, if migration event and the potential are independent. This is a useful property of the estimators because heterogeneity of reproductive potential within/between populations are generally observed in iteroprous species. Third, we demonstrated applicability that the estimation can be obtained only from the genetic data (i.e., ${\hat M_5}$ and ${\hat m_4}$). There are several advantages in using the proposed estimator instead of separately estimating $\pi_{\rm HS,bet}$ (and/or $\pi_{\rm PO,bet}$) (via genetic method) and $N_1$ (and/or $N_2$) (via nongenetical method), including simplified sampling and analyzing designs and availability of unified framework of genetic analyzes for detecting PO and HS pairs (similar discussion is found for estimating effective breeding size per census size, $N_{\rm b}/N$, in \cite{Akita_2020}). 
+We presented mainly three novel points in this paper. First, we formulated probabilities of kinship pairs randomly chosen between two populations ($\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$), which provide estimators of the migration number or rate. While similar derivations may be found in (nongenetical) the MR method, these are limited to the situation such that sampling can be non-invasive and adult individuals are sampled. Our proposed method can avoid these limitations, where such an advantages is characterized by CKMR method. Second, we revealed that the probabilities of kinship pairs are approximately independent of reproductive potential and thus information about it is not needed for the estimation, provided that migration assumes to occur independently of the reproductive potential. This is a useful property of the estimators because it is natural that heterogeneity of reproductive potential within and between populations exits in iteroprous species but its observation is generally difficult except a body size. Third, we demonstrated applicability that the estimation can be obtained only from the genetic data (i.e., ${\hat M_5}$ and ${\hat m_4}$). There are several advantages in using the proposed estimator instead of separately estimating $\pi_{\rm HS,bet}$ (and/or $\pi_{\rm PO,bet}$) (via genetic method) and $N_1$ (and/or $N_2$) (via nongenetical method), including simplified sampling and analyzing designs and availability of unified framework of genetic analyzes for detecting HS and PO pairs (similar discussion is found for estimating the ratio of effective breeding size to the census size, $N_{\rm b}/N$, in \cite{Akita_2020}). 
 
-To estimate the contemporary migration number or migration rate, our simulation-based results provide guidance for a sample size to ensure the required accuracy and precision, especially if the order of the number of migrant parents and parental sizes are approximately known ({\bf Table S1} in {\bf Supporting Information}). For example, when $m=0.1$ and $N_1=N_2=10^3$, sampling 10\% and 20\% parents and an equal number of offspring in two populations leads 70\% and 39\% CV of ${\hat M_5}$, respectively (case of invasive sampling). Even if there is no information about these numbers, $1/\sqrt{H_{\rm HS, bet}}$ (or $1/\sqrt{H_{\rm PO, bet}}$) provides an approximate lower bound on the CV, which can be used as an indicator of the precision of ${\hat M}$ or ${\hat m}$. Furthermore, the condition that $n>\sqrt{N_2}$ is also used as rule of thumb especially when planning a research project (see also Equations~\ref{RS-1} and \ref{RS-2}). 
+To estimate the contemporary migration number or migration rate, our simulation-based results provide guidance for a sample size to ensure the required accuracy and precision, especially if the order of the number of migrant parents and parental sizes are approximately known ({\bf Table S1} in {\bf Supporting Information}). For example, when $m=0.1$ and $N_1=N_2=10^3$, sampling 10\% and 20\% parents and an equal number of offspring in two populations leads 70\% and 39\% CV of ${\hat M_5}$, respectively (case of invasive sampling). Even if there is no information about these numbers, $1/\sqrt{H_{\rm HS, bet}}$ (or $1/\sqrt{H_{\rm PO, bet}}$) provides an approximate lower bound on the CV, which can be used as an indicator of the precision of ${\hat M}$ or ${\hat m}$. Furthermore, the condition that $n>\sqrt{N_2}$ is also used as rule of thumb especially when planning a research project ($n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$, see also Equations~\ref{RS-1} and \ref{RS-2}). 
 
 There may be several cases where it is desirable to apply the proposed estimator. The first case is where there is a certain number of migrants between populations, e.g., $M>100$, which is too large to be detected by population genetics method if $M$ is interpreted as effective migration number. Information on movement between populations is essential for assessing population dynamics in the context of conservation and management, even if migrant number is so large that it cannot be genetically assigned to two populations. The second is the case of the application to genetic monitoring conducted every reproductive timing (e.g., annually). This is because proposed estimators have information about contemporary migration, thus the time series data for migration reflect environmental changes, which provides insights into the underlying ecological processes. In addition, HS pairs found within the genetic population provides $N_{\rm b}$ \cite[]{wang2009new}, which is also used for assessing a genetic health. The third case is where sampling adults is difficult due to conservation purpose or other reasons instead sampling offspring is relatively easy. In this case, although $N_2$ (and $N_1$) need to be given externally for the usage of $\hat m_1$ (and $\hat M_1$), there is presently no other method for estimating adult movement especially when two populations cannot be genetically distinct, indicating that proposed method has the potential to greatly widen the scope of population monitoring. 
 
